tests/core/error/cast-4.rq
# Use unknown xsd type for type cast
SELECT (xsd:asdfqwertyuiop(42) AS ?u) { }